# movie-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  Vagrantfile  app.py  archive_movies.py  config_loader.py  docker-compose.yml  dump_for_kodi.py  dump_record_metadata.py  legacy_move.py  movie_file.py  movie_path_destination_finder.py  process_movie.py  pyproject.toml  scaffold_dir.py  segments_validator.py  settings.py  util.py
commands/: detect_segments.py  dump_for_kodi.py  legacy_move.py  process_movie.py  scaffold_dir.py
docs/: process_movie.md
gui/segment_validators/: main.py
gui/segment_validators/controllers/: detector_selector_controller.py  edit_decision_file_dumper.py  import_segments_from_file.py  media_control_controller.py  media_selector_list_controller.py  segments_list_controller.py  segments_timeline_controller.py  timeline_controller.py  video_controller.py
gui/segment_validators/lib/: simple_video_only_player.py  vlc_instance.py
gui/segment_validators/models/: context.py  events.py  keys.py  segment_container.py
lib/: backup_policy_executor.py  ffmpeg_detect_filter.py  ffmpeg_with_progress.py  movie_path_destination_finder.py  opencv_annotator.py  opencv_detect.py  stream_reader.py  title_extractor.py  ui_factory.py  vsmeta_parser.py
models/: detected_segments.py  movie_segments.py
movie_pipeline/: config_loader.py  main.py  settings.py
movie_pipeline/commands/: archive_movies.py  detect_segments.py  dump_for_kodi.py  launch_media_dashboard.py  legacy_move.py  process_movie.py  scaffold_dir.py  update_media_database.py  validate_dir.py
movie_pipeline/jobs/: Dockerfile  base_cronicle_plugin.py  base_xyops_plugin.py  main.py
movie_pipeline/jobs/data/: .keep
movie_pipeline/lib/: backup_policy_executor.py  ffmpeg_detect_filter.py  ffmpeg_with_progress.py  movie_path_destination_finder.py  nfo_parser.py  opencv_annotator.py  opencv_detect.py  title_extractor.py  util.py  vsmeta_parser.py
movie_pipeline/models/: detected_segments.py  movie_segments.py
movie_pipeline/services/: edl_scaffolder.py  kodi_dumper.py  media_database_updater.py  media_scanner.py  movie_archiver.py  movie_file_processor.py  movie_file_processor_folder_runner.py  movie_file_processor_mpire_runner.py  segments_detector.py
movie_pipeline/templates/: kodi_movie.xml.jinja  kodi_tvshow.xml.jinja
templates/: kodi_movie.xml.jinja  kodi_serie.xml.jinja  kodi_tvshow.xml.jinja
tests/: test_movie_file.py
tests/archive_movies/: test_archive_movies.py  test_config.ini
tests/detect_segments/: test_detect_segments.py
tests/lib/: test_nfo_parser.py  test_util.py
tests/movie_path_destination_finder/: test_config.ini  test_movie_path_destination_finder.py
tests/movie_pipeline/: concerns.py  test_movie_file.py
tests/process_movie/: test_config.ini  test_process_dir.py  test_process_movie.py  test_threaded_process_dir.py
tests/scaffold_dir/: test_config.ini  test_scaffold_dir.py
tests/title_extractor/: test_config.ini  test_title_cleaner.py  test_title_extractor.py
(+86 files in other folders)
