[project]
name = "movie_pipeline"
version = "0.2.12"
description = ""
readme = "README.md"
authors = [{email = "GdPaul1234 <paul.godin1234@outlook.fr>"}]

[project.scripts]
movie_pipeline = "movie_pipeline.main:app"
movie_pipeline_job_archive_movies = "movie_pipeline.jobs.main:archive_movies"
movie_pipeline_job_detect_segments = "movie_pipeline.jobs.main:detect_segments"
movie_pipeline_job_process_movie = "movie_pipeline.jobs.main:process_movie"
movie_pipeline_job_process_directory = "movie_pipeline.jobs.main:process_directory"

[tool.poetry]
packages = [{include = "movie_pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.3"
ffmpeg-python = "^0.2.0"
schema = "^0.7.8"
binpacking = "^1.5.2"
rich = "^14.2.0"
deffcode = "^0.2.6"
opencv-contrib-python = "^4.12.0.88"
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
requests = "^2.32.5"
typer = {extras = ["all"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
